--- a/2016  Plan/9月/图灵机器人/图灵机器人/Class/主界面/View/MainViewController.xib
+++ b/2016  Plan/9月/图灵机器人/图灵机器人/Class/主界面/View/MainViewController.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController">
@@ -15,63 +16,78 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BG002.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="EMf-Nj-nFm">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <animations/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="文本显示" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRy-i2-Rah">
-                    <rect key="frame" x="20" y="26" width="280" height="21"/>
-                    <animations/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BG002.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="EMf-Nj-nFm"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRy-i2-Rah">
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="tcB-Xa-6P0"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rib-uG-ebu">
-                    <rect key="frame" x="42" y="80" width="236" height="30"/>
-                    <animations/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rib-uG-ebu">
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bee-bU-WlZ">
-                    <rect key="frame" x="248" y="124" width="30" height="30"/>
-                    <animations/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bee-bU-WlZ">
+                    <constraints>
+                        <constraint firstAttribute="width" constant="60" id="S7G-L9-R6a"/>
+                        <constraint firstAttribute="height" constant="30" id="T51-oq-sd8"/>
+                    </constraints>
                     <state key="normal" title="发送">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="sendMessege:" destination="-1" eventType="touchUpInside" id="f1O-Bg-GRb"/>
                     </connections>
                 </button>
-                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Tuling01.png" translatesAutoresizingMaskIntoConstraints="NO" id="qZF-cF-n4d">
-                    <rect key="frame" x="0.0" y="362" width="98" height="140"/>
-                    <animations/>
+                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tuling01.png" translatesAutoresizingMaskIntoConstraints="NO" id="qZF-cF-n4d">
                     <gestureRecognizers/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="98" id="fTb-8A-5Rz"/>
+                        <constraint firstAttribute="height" constant="140" id="nVA-Ry-MBE"/>
+                    </constraints>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="gk5-Si-v2v" appends="YES" id="8W4-Xq-gNn"/>
                         <outletCollection property="gestureRecognizers" destination="FeC-Ja-zAa" appends="YES" id="Ukj-Ur-dJO"/>
                     </connections>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I8r-A7-jHu">
-                    <rect key="frame" x="137" y="251" width="46" height="30"/>
-                    <animations/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I8r-A7-jHu">
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="XDz-hy-RkY"/>
+                        <constraint firstAttribute="width" constant="80" id="bpE-8v-2QU"/>
+                    </constraints>
+                    <state key="normal" title="按住说话">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                     <connections>
                         <action selector="start:" destination="-1" eventType="touchUpInside" id="YYH-au-HAt"/>
                     </connections>
                 </button>
             </subviews>
-            <animations/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="EMf-Nj-nFm" secondAttribute="trailing" id="5bS-E9-yLr"/>
+                <constraint firstItem="dRy-i2-Rah" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="BK0-gR-Opp"/>
+                <constraint firstItem="qZF-cF-n4d" firstAttribute="top" secondItem="I8r-A7-jHu" secondAttribute="bottom" constant="20" id="DDa-ue-FCz"/>
                 <constraint firstAttribute="bottom" secondItem="EMf-Nj-nFm" secondAttribute="bottom" id="LMP-qy-5xq"/>
+                <constraint firstAttribute="trailing" secondItem="dRy-i2-Rah" secondAttribute="trailing" constant="20" id="MRi-hw-rvM"/>
+                <constraint firstItem="Bee-bU-WlZ" firstAttribute="leading" secondItem="rib-uG-ebu" secondAttribute="trailing" constant="20" id="Nwv-Ih-fHk"/>
+                <constraint firstItem="rib-uG-ebu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="R3H-TN-mrR"/>
+                <constraint firstAttribute="bottom" secondItem="qZF-cF-n4d" secondAttribute="bottom" constant="180" id="TLI-gr-bjo"/>
+                <constraint firstAttribute="trailing" secondItem="Bee-bU-WlZ" secondAttribute="trailing" constant="20" id="Uzd-DI-g5l"/>
+                <constraint firstItem="rib-uG-ebu" firstAttribute="top" secondItem="dRy-i2-Rah" secondAttribute="bottom" constant="20" id="c56-PN-fRR"/>
                 <constraint firstItem="EMf-Nj-nFm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gan-AP-geC"/>
+                <constraint firstItem="Bee-bU-WlZ" firstAttribute="top" secondItem="dRy-i2-Rah" secondAttribute="bottom" constant="20" id="jDb-3n-NkM"/>
+                <constraint firstItem="qZF-cF-n4d" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="r6H-Or-5M6"/>
+                <constraint firstItem="I8r-A7-jHu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="uT2-ui-lAg"/>
+                <constraint firstItem="dRy-i2-Rah" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="vvO-RH-4Aw"/>
                 <constraint firstItem="EMf-Nj-nFm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="yMb-H1-tcR"/>
             </constraints>
-            <point key="canvasLocation" x="410" y="354"/>
+            <point key="canvasLocation" x="409.5" y="353.5"/>
         </view>
         <panGestureRecognizer minimumNumberOfTouches="1" id="gk5-Si-v2v">
             <connections>
@@ -88,4 +104,9 @@
         <image name="BG002.jpg" width="1000" height="655"/>
         <image name="Tuling01.png" width="1429" height="1670"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
